--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-cli": "*",
     "babel-core": "*",
     "babel-preset-env": "*",
-    "babel-preset-stage-0": "*"
+    "babel-preset-stage-0": "*",
+    "eslint": "*"
   }
 }
