--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "babel-core": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*",
-    "eslint": "*"
+    "eslint": "^4.18.1"
   }
 }
