--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "brainless_game",
-  "version": "0.0.5",
+  "version": "0.0.5a",
   "description": "starting ver",
   "main": "index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
