--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "brainless_game",
-  "version": "0.0.5d",
+  "version": "0.0.6",
   "description": "starting ver",
   "main": "index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
