--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brainless_game",
-  "version": "0.0.8a",
+  "version": "0.0.9a",
   "description": "starting ver",
   "main": "index.js",
   "bin": {
@@ -9,7 +9,8 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
